--- a/templates/back/transportback.html.twig
+++ b/templates/back/transportback.html.twig
@@ -42,7 +42,9 @@
 
 <div style="margin-top: 20px;"> <!-- Adjust margin-top as needed -->
  <i data-feather="search"></i>
+
   <input type="text" id="searchInput" oninput="search()" placeholder=" nom/aresse/type...">
+  <i data-feather="refresh-cw" title="Trier par date" onclick="sortTable()"></i> 
     <table class="table table-bordered" id="stationTable">
         <thead>
             <tr>
@@ -96,6 +98,30 @@
                 row.style.display = "none";
             }
         });
+    }
+</script>
+<script>
+    function sortTable() {
+        var table, rows, switching, i, x, y, shouldSwitch;
+        table = document.getElementById("stationTable");
+        switching = true;
+        while (switching) {
+            switching = false;
+            rows = table.rows;
+            for (i = 1; i < (rows.length - 1); i++) {
+                shouldSwitch = false;
+                x = rows[i].getElementsByTagName("td")[1]; // Changer 1 à l'index de la colonne dateDepart
+                y = rows[i + 1].getElementsByTagName("td")[1];
+                if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+                    shouldSwitch = true;
+                    break;
+                }
+            }
+            if (shouldSwitch) {
+                rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+                switching = true;
+            }
+        }
     }
 </script>
 {% endblock %}
