--- a/templates/Front/signUp.html.twig
+++ b/templates/Front/signUp.html.twig
@@ -1,8 +1,9 @@
 
 <link href="css/app.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+<title>{% block title %}E-city{% endblock %}</title>
 
-
+  <link href="{{ asset ('img/icone.png') }}" rel="icon">
 {% block section %}
 
 	
@@ -12,12 +13,14 @@
 				<div class="col-sm-10 col-md-8 col-lg-6 mx-auto d-table h-100">
 					<div class="d-table-cell align-middle">
 
-						<div class="text-center mt-4">
-							<h1 class="h2">Get started</h1>
-							<p class="lead">
-								Start creating the best possible user experience for you customers.
-							</p>
-						</div>
+		<div class="text-center mt-4">
+	<a href="{{ path ('app_acceuil')}}">
+		<h1 style="color: #37423b; font-size: 35px;">
+			<strong>E-CITY</strong>
+		</h1>
+	</a>
+	<p  style=" font-size: 20px; font-weight: bold;"> Créer un compte</p>
+</div>
 
 						<div class="card">
 							<div class="card-body">
@@ -27,34 +30,51 @@
 										<div class="mb-3">
 											<label class="form-label">Nom</label>
     {{ form_widget(form_client.personne.nom_personne, {'attr': {'class': 'form-control form-control-lg', 'type':'text', 'placeholder': 'Saisir votre nom'}}) }}
+	        <td colspan="2"> {{ form_errors(form_client.personne.nom_personne) }}</td>
+
 										</div>
 										<div class="mb-3">
 											<label class="form-label">Prenom</label>
     {{ form_widget(form_client.personne.prenom_personne, {'attr': {'class': 'form-control form-control-lg', 'type':'text', 'placeholder': 'Saisir votre prénom'}}) }}
+	        <td colspan="2">{{ form_errors(form_client.personne.prenom_personne) }}  </td>
+
 										</div>
 										<div class="mb-3">
 											<label class="form-label">Genre</label>
     {{ form_widget(form_client.genre, {'attr': {'class': 'form-control form-control-lg'}}) }}
+	        <td >{{ form_errors(form_client.genre) }}</td>
+
 										</div>
 											<div class="mb-3">
 											<label class="form-label">Age</label>
     {{ form_widget(form_client.age, {'attr': {'class': 'form-control form-control-lg', 'type':'number', 'placeholder': 'Saisir votre âge', 'step': '1'}}) }}
+	        <td >{{ form_errors(form_client.age) }}</td>
+
 										</div>
 										<div class="mb-3">
 											<label class="form-label">Adresse Mail</label>
     {{ form_widget(form_client.personne.mail_personne, {'attr': {'class': 'form-control form-control-lg', 'type':'email', 'placeholder': 'Saisir une adresse mail'}}) }}
+	        <td >{{ form_errors(form_client.personne.mail_personne) }}</td>
+
 										</div>
 										<div class="mb-3">
 											<label class="form-label">Mot de passe</label>
     {{ form_widget(form_client.personne.mdp_personne, {'attr': {'class': 'form-control form-control-lg', 'type':'password', 'placeholder': 'Saisir un mot de passe'}}) }}
+	        <td >{{ form_errors(form_client.personne.mdp_personne) }}</td>
+
 						</div>
 									<div class="mb-3">
 											<label class="form-label">Numero telephone</label>
     {{ form_widget(form_client.personne.numero_telephone, {'attr': {'class': 'form-control form-control-lg', 'type':'number', 'placeholder': 'Saisir votre numero de telephone', 'step': '1'}}) }}
+	        <td >{{ form_errors(form_client.personne.numero_telephone) }}</td>
+
 										</div>
 								<div class="mb-3">
 											<label class="form-label">Image personne</label>
     {{ form_widget(form_client.personne.image_personne, {'attr': {'class': 'form-control form-control-lg', 'type':'file'}}) }}
+	        <td >{{ form_errors(form_client.personne.image_personne) }}</td>
+
+
 										</div>
 										<div class="text-center mt-3">
         {{ form_widget(form_client.Submit, {'label': 'S\'inscrire', 'attr': {'class': 'btn btn-lg btn-primary'}}) }}
